--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,3 @@
-aiofiles==24.1.0
-annotated-types==0.7.0
-anyio==4.9.0
-attrs==25.3.0
-audioop-lts==0.2.1
-Bottleneck @ file:///C:/b/abs_816hr2khp1/croot/bottleneck_1731058648110/work
-Brotli==1.1.0
-certifi==2025.7.14
-charset-normalizer==3.4.2
-click==8.2.1
-colorama==0.4.6
-coloredlogs==15.0.1
-fastapi==0.116.1
-ffmpy==0.6.0
-filelock==3.18.0
-flatbuffers==25.2.10
-fsspec==2025.5.1
-gradio==5.37.0
-gradio_client==1.10.4
-groovy==0.1.2
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.33.4
-humanfriendly==10.0
-idna==3.10
-imageio==2.37.0
-Jinja2==3.1.6
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-lazy_loader==0.4
-llvmlite==0.44.0
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-mkl-service==2.4.0
-mkl_fft @ file:///C:/Users/dev-admin/mkl/mkl_fft_1730824198951/work
-mkl_random @ file:///C:/Users/dev-admin/mkl/mkl_random_1730824302834/work
-mpmath==1.3.0
-networkx==3.5
-numba==0.61.2
-numexpr @ file:///C:/b/abs_4e0h6i5ip2/croot/numexpr_1752521729801/work
-numpy==2.2.6
-onnxruntime==1.22.1
-opencv-python-headless==4.12.0.88
-orjson==3.10.18
-packaging==25.0
-pandas @ file:///C:/b/abs_e18w9ay4we/croot/pandas_1732735115740/work/dist/pandas-2.2.3-cp313-cp313-win_amd64.whl#sha256=89153934c68f42239148879a6c0fd8bb5004e767550db26257dc4551ad0414d7
-pillow==11.3.0
-platformdirs==4.3.8
-pooch==1.8.2
-protobuf==6.31.1
-pydantic==2.11.7
-pydantic_core==2.33.2
-pydub==0.25.1
-Pygments==2.19.2
-PyMatting==1.1.14
-pyreadline3==3.5.4
-python-dateutil @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/python-dateutil_1729038406576/work
-python-multipart==0.0.20
-pytz @ file:///C:/b/abs_f8wdzeix0n/croot/pytz_1752135878094/work
-PyYAML==6.0.2
-referencing==0.36.2
-rembg==2.0.67
-requests==2.32.4
-rich==14.0.0
-rpds-py==0.26.0
-ruff==0.12.3
-safehttpx==0.1.6
-scikit-image==0.25.2
-scipy==1.16.0
-semantic-version==2.10.0
-setuptools==72.1.0
-shellingham==1.5.4
-six @ file:///C:/b/abs_149wuyuo1o/croot/six_1744271521515/work
-sniffio==1.3.1
-starlette==0.47.1
-sympy==1.14.0
-tifffile==2025.6.11
-tomlkit==0.13.3
-tqdm==4.67.1
-typer==0.16.0
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-tzdata @ file:///croot/python-tzdata_1746123641790/work
-urllib3==2.5.0
-uvicorn==0.35.0
-websockets==15.0.1
-wheel==0.45.1
+gradio
+rembg
+pillow
